feat: add a basic functionality

--- a/js30-1.20-audio-player/index.html
+++ b/js30-1.20-audio-player/index.html
@@ -44,8 +44,8 @@
                     </div>
                 </div>
                 <div class="current">
-                    <div class="current-image"
-                    style="background-image: url(asserts/images/image1.jpg);"></div>
+                    <!-- <div class="current-image"
+                    style="background-image: url(asserts/images/track1.jpg);"></div>
                     <div class="current-info">
                         <div class="current-info__top">
                             <div class="current-info__titles">
@@ -56,12 +56,12 @@
                         </div>
                         <div class="controls">
                             <div class="controls-buttons">
-                                <button class="controls-button contols-prev">
+                                <button class="controls-button controls-prev">
                                     <svg class="icon-arrow">
                                         <use xlink:href="asserts/images/sprite.svg#arrow"></use>
                                     </svg>
                                 </button>
-                                <button class="controls-button contols-play">
+                                <button class="controls-button controls-play">
                                     <svg class="icon-pause">
                                         <use xlink:href="asserts/images/sprite.svg#pause"></use>
                                     </svg>
@@ -85,14 +85,14 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="list">
                     <p class="list-title">Tracks</p>
                     <div class="items">
-                        <div class="item">
+                        <!-- <div class="item">
                             <div class="item-image"
-                            style="background-image: url(asserts/images/image1.jpg);"></div>
+                            style="background-image: url(asserts/images/track1.jpg);"></div>
                             <div class="item-titles">
                                 <h2 class="item-group">Ketty perry</h2>
                                 <h3 class="item-track">Black horse</h3>
@@ -108,13 +108,13 @@
                                     <use xlink:href="asserts/images/sprite.svg#play"></use>
                                 </svg>
                             </button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
             </div>
         </main>
     </div>
-    
+    <script type="module" src="asserts/js/script.js"></script>
 </body>
 </html>
