--- a/js30-1.20-audio-player/index.html
+++ b/js30-1.20-audio-player/index.html
@@ -77,7 +77,7 @@
                             </div>
                             <div class="controls-progress">
                                 <div class="progress">
-                                    <div class="progress-current" style="width: 20%;"></div>
+                                    <input type="range" class="progress-current" min="0" max="100" step="0.01" value="0" />
                                 </div>
                                 <div class="timeline">
                                     <span class="time-start">00:32</span>
