fix: change the view of the slider thumb

--- a/js30-1.20-audio-player/index.html
+++ b/js30-1.20-audio-player/index.html
@@ -11,7 +11,7 @@
     <title>Music player</title>
 </head>
 <body>
-    <div class="root">
+    <div class="base">
         <h1>Audio Player</h1>
         <main class="app">
             <div class="content">
@@ -76,9 +76,7 @@
                                 </button>
                             </div>
                             <div class="controls-progress">
-                                <div class="progress">
-                                    <input type="range" class="progress-current" min="0" max="100" step="0.01" value="0" />
-                                </div>
+                                <input type="range" class="progress-current" min="0" max="100" step="0.01" value="0" />
                                 <div class="timeline">
                                     <span class="time-start">00:32</span>
                                     <span class="time-end">02:32</span>
