Fix: change the footer

--- a/js30-1.20-audio-player/index.html
+++ b/js30-1.20-audio-player/index.html
@@ -112,6 +112,13 @@
 
             </div>
         </main>
+        <footer class="footer-rs">
+            <a href="https://github.com/TimopheySafonov1" class="github" target="_blank">Github</a>
+            <div class="year-created">2023</div>
+            <a href="https://rs.school/js-stage0/">
+                <img src="asserts/images/rs_school-og.jpg" alt="RS SCHHOL" class="rs-school">
+            </a>
+        </footer>
     </div>
     <script type="module" src="asserts/js/script.js"></script>
 </body>
